testsuite/negative/extension-methods.n
#pragma indent
using System.Console

[Record] \
class A
  public v : int
  public foo () : void
    Write ("foo()\n")

class B
  public Foo(this a : A, p : int) : void // E: Extension methods need to be marked static and should not be protected
    Write ($"foo($(a.v),$p)\n")

  protected static Bar(this a : A, p : int) : void // E: Extension methods need to be marked static and should not be protected
    Write ($"foo($(a.v),$p)\n")
    
class C
  public foo (p : int, this a : A) : void // E: 'this' modifier \(for extension method\) can only be used on the first parameter
    Write ($"foo($(a.v),$p)\n")

